# Reddit-Clone

./: .gitignore  README.md  pyproject.toml  requirements.txt
REDDIT_CLONE/: settings.py  urls.py
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_auto_20200708_1953.py  0003_reddituser_subscribed.py  0004_remove_reddituser_subscribed.py
comments/: forms.py  models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_auto_20200707_1648.py  0002_auto_20200715_1658.py
posts/: forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20200708_1953.py
reddit_clone/: settings.py  urls.py
subreddit/: admin.py  forms.py  models.py  urls.py  views.py
subreddit/migrations/: 0001_initial.py  0002_auto_20200708_1938.py  0003_auto_20200708_1940.py  0004_auto_20200708_1942.py  0005_remove_moderator_subreddit.py  0006_auto_20200714_1527.py  0007_auto_20200715_1506.py  0008_followreddit.py  0009_followreddit_following.py  0010_delete_followreddit.py
templates/authentication/: 400.html  403.html  404.html  500.html  login.html  main.html  signup.html
templates/comments/: addcomment.html  comments.html
templates/posts/: addpost.html  post.html  posts.html
templates/subreddit/: addsubreddit.html  main.html  subreddit.html
