[tool.poetry]
name = "reddit-clone"
version = "0.1.0"
description = ""
authors = ["Ybrayym <ybrayymjan90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.6"
django-mptt = "^0.11.0"
django-heroku = "^0.3.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
